# PhysicsEngineC4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gui/: CMakeLists.txt
gui/threading/: safequeue.h  safequeue.tpp
gui/ui/: GraphicsScene.cpp  GraphicsScene.h  ShapeManager.cpp  ShapeManager.h  ShapePropertiesModel.cpp  ShapePropertiesModel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  properties.h  span.hpp
libphysics/: CMakeLists.txt
libphysics/include/physics/: collision.h  core.h  object.h  shape.h  utils.h  world.h
libphysics/include/physics/shapes/: circle.h  polygon.h  rectangle.h
libphysics/src/: circle.cpp  collision.cpp  core.cpp  main.cpp  object.cpp  polygon.cpp  world.cpp
libphysics/src/physics/: collision.cpp  utils.cpp
src/ui/: MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.ui
